--- a/server/package.json
+++ b/server/package.json
@@ -19,5 +19,8 @@
     "express-ejs-layouts": "^2.5.1",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.14"
+  },
+  "devDependencies": {
+    "cookie-parser": "^1.4.5"
   }
 }
