--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.1",
+    "google-auth-library": "^7.10.2",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.14"
   },
