--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "async-foreach": "^0.1.3",
+    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
@@ -18,8 +21,11 @@
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.1",
     "google-auth-library": "^7.10.2",
+    "js": "^0.1.0",
+    "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
-    "nodemon": "^2.0.14"
+    "nodemon": "^2.0.14",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "cookie-parser": "^1.4.5"
